<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能终端</string>
    <string name="login_title">智能一体化终端</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="idtxthint">用户名</string>
    <string name="pwdtxthint">密码</string>
    <string name="loginbtntext">登录</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="loading">正在登录</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="housein">这是入库申请界面</string>
    <string name="houseout">这是出库申请界面</string>
    <string name="order_record_start_date">开始日期</string>
    <string name="order_record_end_date">结束日期</string>
    <string name="date_pick_tip_start">不能超过今日日期或结束日期</string>
    <string name="date_pick_tip_end">不能小于开始日期或超过今日日期</string>
    <string name="search">查询</string>
    <string name="search_content">查询内容</string>
    <string name="search_content_hint">单据编号、关联编号、商品编号、商品名称、单据备注</string>
    <string name="add">新增</string>
    <string name="today">今天</string>
    <string name="clear">清除</string>
    <string name="housein_add_title">入库单</string>
    <string name="bill_num">单据编号</string>
    <string name="bill_date">单据日期</string>
    <string name="which_house_in">收货仓库</string>
    <string name="which_house_out">发货仓库</string>
    <string name="hander_name">经手人</string>
    <string name="house_in_type">入库类型</string>
    <string name="house_out_type">出库类型</string>
    <string name="remark">备注</string>
    <string name="order_bill">连续开单</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="product_num">商品编号</string>
    <string name="product_name">商品名称</string>
    <string name="unit">单位</string>
    <string name="count">数量</string>
    <string name="add_product">增加商品</string>
    <string name="cut_product">减少商品</string>
    <string name="status">状态</string>
    <string name="confirm_housein">确认入库</string>
    <string name="confirm">确认</string>
    <string name="page_info">共%1$d记录，每页%2$d条，共%3$d页</string>
    <string name="first_page">首页</string>
    <string name="last_page">尾页</string>
    <string name="pre_page">上页</string>
    <string name="next_page">下页</string>
    <string name="goto_page">跳转</string>
    <string name="logistics_company">物流公司</string>
    <string name="logistics_no">物流单号</string>
    <string name="logistics_price">代垫费用</string>
    <string name="company_account">企业账号</string>
    <string name="register">注册</string>
    <string name="verification">验证</string>
    <string name="serial_number">序列号</string>
    <string name="use_sn">使用序列号</string>
    <string name="refresh">刷新</string>
    <string name="no_msg">暂无消息</string>
    <string name="scan_barcode">扫条码</string>
    <string name="work_no">工位编码：</string>
    <string name="mould_no">模具编码：</string>
    <string name="scan_work_no">扫描工位编码</string>
    <string name="scan_mould_no">扫描模具编码</string>
    <string name="bind">装配</string>

</resources>