<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.hnao.warehouse.view.SearchByDateView
        android:id="@+id/date_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp" >
    </com.hnao.warehouse.view.SearchByDateView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal" >

            <TextView
                style="@style/common_tv_style"
                android:text="@string/search_content" />

            <EditText
                android:id="@+id/et_search_content"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:ems="20"
                android:hint="@string/search_content_hint"
                android:imeOptions="actionDone"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_search"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/common_button_bg_selector"
                android:text="@string/search"
                android:textColor="#FFFFFF"
                android:textSize="19sp" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/common_button_bg_selector"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textSize="19sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_page_info"
            style="@style/page_info_style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_first_page"
                style="@style/page_tv_click_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_page" />

            <TextView
                android:id="@+id/tv_pre_page"
                style="@style/page_tv_click_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pre_page" />

            <TextView
                android:id="@+id/tv_next_page"
                style="@style/page_tv_click_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_page" />

            <TextView
                android:id="@+id/tv_last_page"
                style="@style/page_tv_click_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_page" />

            <EditText
                android:id="@+id/et_page"
                style="@style/page_tv_click_style"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_goto"
                style="@style/page_tv_click_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goto_page" />
        </LinearLayout>
    </LinearLayout>

    <com.hnao.warehouse.view.PagedHScrollTable
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1" >
    </com.hnao.warehouse.view.PagedHScrollTable>

</LinearLayout>