<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/login_title"
        android:textSize="40dp" />

    <LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_white"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/login_edtId"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/company_account"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" >

                <requestFocus />
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

            <EditText
                android:id="@+id/login_edtPwd"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="@string/pwdtxthint"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_sn_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/use_sn" />

        <Button
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_style"
            android:text="@string/verification"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />
    </LinearLayout>

</LinearLayout>