<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textSize="50dp" />

    <LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_white"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_sn"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/serial_number"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_sn_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/use_sn" />

        <Button
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_style"
            android:text="@string/verification"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />
    </LinearLayout>

</LinearLayout>