<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/small_padding_red_tv_style"
            android:text="@string/work_no" />

        <TextView
            android:id="@+id/tv_work_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_scan_work"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/common_button_bg_selector"
        android:text="@string/scan_work_no"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/small_padding_red_tv_style"
            android:text="@string/mould_no" />

        <TextView
            android:id="@+id/tv_mould_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_scan_mould"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/common_button_bg_selector"
        android:text="@string/scan_mould_no"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_bind"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/common_button_bg_selector"
        android:text="@string/bind"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</LinearLayout>